      in package-installs-into-etc-rc.boot description.
      Thanks to Jakub Wilk (Closes: #729034).
    + [BR] Add a moreinfo field to obsolete path.
    + [BR] Fix non-conf-file-in-modprobe.d description
      (Closes: #729037).
    + [BR] Check privacy breach only in regular file.
    + [BR] Add link tag as potential privacy breaker.

  * checks/rules.{desc,pm}:
    + [BR] Use Lintian::Data for forbidden construct in rules
      file.
    + [BR] Rename debian-rules-automatically-updates-control to
      debian-rules-should-not-automatically-update-control.
    + [BR] Rename debian-rules-uses-pwd to
      debian-rules-should-not-use-pwd.
    + [BR] Rename debian-rules-uses-DEB_BUILD_OPTS to
      debian-rules-should-not-use-DEB_BUILD_OPTS.
    + [BR] Rename debian-rules-uses-or-modifies-user-only-variable
      to debian-rules-should-not-use-or-modify-user-only-variable.

  * checks/watch.{desc,pm}:
    + [BR] Fix the description of debian-watch-may-check-gpg-signature tag.
      Thanks to Gregor Herrmann for the bug report and patch
      (Closes: #732799).

  * data/cruft/non-free-files:
    + [BR] Add sRGB.icm to non free files (Closes: #699369).
    + [BR] Add a few non free font files (Closes: #298545).
    + [BR] Add non free w3c valid icons.

  * data/fields/obsolete-packages:
    + [BR] Apply patch from Jonas Genannt to render obsolete ruby 1.8.

  * data/files/obsolete-paths:
    + [BR] Add /etc/X11/fonts/X11R7 as obsolete path (Closes: #646872).

  * data/files/privacy-breaker-{fragments,websites}
    + [BR] Add w3c website valid x?html icons.
    + [BR] Add piwik detection.
    + [BR] Add detection of well known statistics websites.

  * data/rules/rules-should-not-use:
    + [BR] Detect use of $(_) variable in debian/rules (Closes: #585495).

  * data/scripts/maintainer-script-bad-command:
    + [BR] Service is reserved to system admin (Closes: #656229).

  * debian/control:
    + [NT] Add relevant relations on libyaml-perl, which is