@@ -951,6 +951,13 @@ Info: This package creates a privacy breach by using Google Adsense.
  Google Adsense terms of use. This violation renders this package not
  distributable in Debian, and thus a serious bug.
 
+Tag: privacy-breach-facebook
+Severity: serious
+Certainty: possible
+Info: This package create a privacy breach by fetching some data from
+  facebook like share or like buttons.
+  Please remove these scripts or frames.
+
 Tag: privacy-breach-piwik
 Severity: serious
 Certainty: possible
