@@ -1,0 +1,1 @@
+<fb:like href="http://developers.facebook.com/docs/reference/plugins/like" width="450" show_faces="true" send="true"></fb:like>
