@@ -1,3 +1,9 @@
+E: files-privacybreach: privacy-breach-facebook usr/share/files-privacybreach/html/facebookfbmlbody2008.html
+E: files-privacybreach: privacy-breach-facebook usr/share/files-privacybreach/html/facebookfbmlbody2013.html
+E: files-privacybreach: privacy-breach-facebook usr/share/htmlfragment/facebook.xml
+E: files-privacybreach: privacy-breach-facebook usr/share/htmlfragment/facebookhtml5like20130810.xml
+E: files-privacybreach: privacy-breach-facebook usr/share/htmlfragment/facebookhtml5likebody20130810.xml
+E: files-privacybreach: privacy-breach-facebook usr/share/htmlfragment/facebookxfbmllike20130810.xml
 E: files-privacybreach: privacy-breach-google-adsense usr/share/files-privacybreach/html/adsense.html
 E: files-privacybreach: privacy-breach-google-adsense usr/share/files-privacybreach/html/adsenseonlyadds.html
 E: files-privacybreach: privacy-breach-google-adsense usr/share/htmlfragment/urchinfragment.xml
