@@ -27,6 +27,7 @@ lintian (2.5.21) UNRELEASED; urgency=medium
       (Closes: #729037).
     + [BR] Check privacy breach only in regular file.
     + [BR] Add link tag as potential privacy breaker.
+    + [BR] Add <div data-href="http://website" to potential privacy breaker.
 
   * checks/rules.{desc,pm}:
     + [BR] Use Lintian::Data for forbidden construct in rules
@@ -60,6 +61,7 @@ lintian (2.5.21) UNRELEASED; urgency=medium
     + [BR] Add w3c website valid x?html icons.
     + [BR] Add piwik detection.
     + [BR] Add detection of well known statistics websites.
+    + [BR] Detect facebook.
 
   * data/rules/rules-should-not-use:
     + [BR] Detect use of $(_) variable in debian/rules (Closes: #585495).
